# aurarouter-cuda12

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/aurarouter_cuda12/: __init__.py  diagnostics.py  logging.py  metadata.py
